--- a/YourCourses/Views/Shared/_Layout.cshtml
+++ b/YourCourses/Views/Shared/_Layout.cshtml
@@ -27,9 +27,9 @@
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("Проверка кода", "Index", "Practice")</li>
                     <li>@Html.ActionLink("Интерактивные курсы", "Index", "CoursesList")</li>
-                    <li>@Html.ActionLink("Опросы", "Index", "Home1")</li>
-                    <li><a href="#contact">CONTACT</a></li>
-                    <li class="fix" style="color:aqua">@Html.Partial("_LoginPartial")</li>
+                    
+                    <li>@Html.ActionLink("Помощь", "Contact", "Home")</li>
+                    <li style="color:aqua">@Html.Partial("_LoginPartial")</li>
                 </ul>
             </div>
         </div>
