--- a/YourCourses/Views/CoursesList/Lecture.cshtml
+++ b/YourCourses/Views/CoursesList/Lecture.cshtml
@@ -3,10 +3,10 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="~/Content/bootstrap.min.css">
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/jquery-3.1.1.min.js"></script>
 <script src="~/Scripts/bootstrap.min.js"></script>
 
-<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/jquery-3.1.1.js"></script>
 <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 <script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
 <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
@@ -17,8 +17,23 @@
 <label for="">@ViewBag.id</label>
 @if (User.IsInRole("admin"))
 {
-    @Html.ActionLink(" Добавить модуль ", "Create", "Lectures", null, new { @class = "btn btn-outline-info" })
+    @Html.ActionLink(" Добавить модуль ", "Create", "Lectures", null, new { @class = "btn btn-info" })
 }
+<hr>
+<style>
+    hr {
+        -moz-border-bottom-colors: none;
+        -moz-border-image: none;
+        -moz-border-left-colors: none;
+        -moz-border-right-colors: none;
+        -moz-border-top-colors: none;
+        border-color: #EEEEEE  #FFFFFF;
+        border-style: solid none;
+        border-width: 3px 0;
+        margin: 18px 0;
+        
+    }
+</style>
     @*@foreach (var l in Model)
         {
             <br>
@@ -29,21 +44,27 @@
 
 
     <br />
-
+<ul class="nav nav-tabs">
     @foreach (var s in Model)
             {
-        <div style="margin-right:8px;float:left;">
-            
+        @*<div style="margin-right:8px;float:left;">*@
 
 
-            @Ajax.ActionLink(s.LectureName, "SublecturesList", new { id = s.LectureId },
-           new AjaxOptions { UpdateTargetId = "results", LoadingElementId = "loading" })
-        </div>
+            <li >
+                @Ajax.ActionLink(s.LectureName, "SublecturesList", new { id = s.LectureId, data_toggle = "tab" },
+           new AjaxOptions { UpdateTargetId = "results"/*, LoadingElementId = "loading"*/ }
 
-        
+           )
+                
+            </li>
+        @*</div>*@
+
+
 
     }
-<div id="results"></div>
+    
+</ul>
+    <div id="results"></div>
 
     <style>
         /* Icon when the collapsible content is shown */
