--- a/YourCourses/Views/CoursesList/ShowLecture.cshtml
+++ b/YourCourses/Views/CoursesList/ShowLecture.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = null;
 }
-<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/jquery-3.1.1.js"></script>
 <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 <script src="~/Scripts/codemirror-2.37/lib/codemirror.js"></script>
 <script src="~/Scripts/codemirror-2.37/mode/clike/clike.js" type="text/javascript"></script>
@@ -19,7 +19,7 @@
 <div role="separator" class="divider"></div>
 <div id="results2"></div>
 
-<img id="loading1" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />
+@*<img id="loading1" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
 
 <script>
 
