--- a/YourCourses/Views/CoursesList/SubLecturesList.cshtml
+++ b/YourCourses/Views/CoursesList/SubLecturesList.cshtml
@@ -2,22 +2,30 @@
 @model IEnumerable<YourCourses.Models.SubLecture>
 
 <script src="~/Scripts/bootstrap.min.js"></script>
-@foreach (var items in Model)
-{
+
+<ul class="nav nav-tabs">
+    @foreach (var items in Model)
+    {
+        <br>
+        <br>
+        <li role="presentation" class="active">
+
+            @Ajax.ActionLink(" "+@items.SubName, "ShowLecture", new { id = items.SubId },
+    new AjaxOptions { UpdateTargetId = "results1"/*, LoadingElementId = "loading3"*/ },
+    new { @style = "text-transform:capitalize;", @class= "glyphicon glyphicon-book" })
+
+        </li>
+       
+        @*<img id="loading3" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
+
+    }
+    </ul>
     <br>
+    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new { @class = "btn btn-outline-info" })
     <br>
-    @Ajax.ActionLink(@items.SubName, "ShowLecture", new { id = items.SubId },
-    new AjaxOptions { UpdateTargetId = "results1", LoadingElementId = "loading3" }, 
-    new { @style = "text-transform:capitalize;",@class = "btn btn-outline-info" })
-    @*<img id="loading3" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
+    @Html.ActionLink("Добавить практику", "Create", "PracticesHome")
 
-}
-<br>
-@Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new { @class = "btn btn-outline-info" })
-<br>
-@Html.ActionLink("Добавить практику", "Create", "PracticesHome")
+    <div id="results1"></div>
 
-<div id="results1"></div>
 
-    
-    
+
