Add some buttons styles

--- a/YourCourses/Views/Courses/Create.cshtml
+++ b/YourCourses/Views/Courses/Create.cshtml
@@ -73,5 +73,5 @@
     });
     </script>
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
 </div>
