--- a/YourCourses/Views/CoursesList/Index.cshtml
+++ b/YourCourses/Views/CoursesList/Index.cshtml
@@ -12,8 +12,11 @@
             background-color: #fff !important;
             color: #f4511e;
         }
+    .panel:hover {
+        box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+    }
         .panel-footer h3 {
-            font-size: 32px;
+            font-size: 23px;
         }
 
         .panel-footer h4 {
@@ -26,11 +29,16 @@
             background-color: #1c1918;
             color: #fff;
         }
+    .panel {
+        border: 1px solid #1c1b1a;
+        border-radius: 0 !important;
+        transition: box-shadow 0.3s;
+    }
 
     .panel-heading {
         color: #fff !important;
         background-color: #939367 !important;
-        padding: 25px;
+        padding: 12px;
         border-bottom: 1px solid transparent;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
@@ -68,7 +76,7 @@
                 </div>
             </div>
            </div>
-                
+                <hr>
             </li>
 
             @*<li>
