--- a/YourCourses/Views/Home/Index.cshtml
+++ b/YourCourses/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-@{ 
+@{
     Layout = null;
 
 }
@@ -8,7 +8,7 @@
     <!-- Theme Made By www.w3schools.com - No Copyright -->
     <title>YourCourses Page</title>
     <meta charset="utf-8">
-    
+    <link rel="stylesheet" href="~/Content/Index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
@@ -17,12 +17,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="~/Scripts/jquery-3.1.1.js"></script>
     <style>
-  body {
-      font: 400 15px Lato, sans-serif;
-      line-height: 1.8;
-      color: #818181;
-  }
-        
+        body {
+            font: 400 15px Lato, sans-serif;
+            line-height: 1.8;
+            color: #818181;
+        }
+
         h2 {
             font-size: 24px;
             text-transform: uppercase;
@@ -30,76 +30,93 @@
             font-weight: 600;
             margin-bottom: 30px;
         }
-  h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      color: #303030;
-      font-weight: 400;
-      margin-bottom: 30px;
-  }
+
+        h4 {
+            font-size: 19px;
+            line-height: 1.375em;
+            color: #303030;
+            font-weight: 400;
+            margin-bottom: 30px;
+        }
+
         .jumbotron {
             background-color: #939367;
             color: #fff;
             padding: 100px 25px;
             font-family: Montserrat, sans-serif;
         }
-  .container-fluid {
-      padding: 60px 50px;
-  }
-  .bg-grey {
-      background-color: #f6f6f6;
-  }
+
+        .container-fluid {
+            padding: 60px 50px;
+        }
+
+        .bg-grey {
+            background-color: #f6f6f6;
+        }
+
         .logo-small {
             color: #0f0d0c;
             font-size: 50px;
         }
+
         .logo {
             color: #232120;
             font-size: 200px;
         }
-  .thumbnail {
-      padding: 0 0 15px 0;
-      border: none;
-      border-radius: 0;
-  }
-  .thumbnail img {
-      width: 100%;
-      height: 100%;
-      margin-bottom: 10px;
-  }
+
+        .thumbnail {
+            padding: 0 0 15px 0;
+            border: none;
+            border-radius: 0;
+        }
+
+            .thumbnail img {
+                width: 100%;
+                height: 100%;
+                margin-bottom: 10px;
+            }
+
         .carousel-control.right, .carousel-control.left {
             background-image: none;
             color: #111111;
         }
+
         .carousel-indicators li {
             border-color: #1c1a1a;
         }
-        .carousel-indicators li.active {
-            background-color: #1c1a1a;
+
+            .carousel-indicators li.active {
+                background-color: #1c1a1a;
+            }
+
+        .item h4 {
+            font-size: 19px;
+            line-height: 1.375em;
+            font-weight: 400;
+            font-style: italic;
+            margin: 70px 0;
         }
-  .item h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      font-weight: 400;
-      font-style: italic;
-      margin: 70px 0;
-  }
-  .item span {
-      font-style: normal;
-  }
+
+        .item span {
+            font-style: normal;
+        }
+
         .panel {
             border: 1px solid #1c1b1a;
             border-radius: 0 !important;
             transition: box-shadow 0.5s;
         }
-  .panel:hover {
-      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
-  }
+
+            .panel:hover {
+                box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+            }
+
         .panel-footer .btn:hover {
             border: 1px solid #1c1918;
             background-color: #fff !important;
             color: #f4511e;
         }
+
         .panel-heading {
             color: #fff !important;
             background-color: #1c1918 !important;
@@ -110,21 +127,26 @@
             border-bottom-left-radius: 0px;
             border-bottom-right-radius: 0px;
         }
-  .panel-footer {
-      background-color: white !important;
-  }
-  .panel-footer h3 {
-      font-size: 32px;
-  }
-  .panel-footer h4 {
-      color: #aaa;
-      font-size: 14px;
-  }
-        .panel-footer .btn {
-            margin: 15px 0;
-            background-color: #1c1918;
-            color: #fff;
+
+        .panel-footer {
+            background-color: white !important;
         }
+
+            .panel-footer h3 {
+                font-size: 32px;
+            }
+
+            .panel-footer h4 {
+                color: #aaa;
+                font-size: 14px;
+            }
+
+            .panel-footer .btn {
+                margin: 15px 0;
+                background-color: #1c1918;
+                color: #fff;
+            }
+
         .navbar {
             margin-bottom: 0;
             background-color: #1c1918;
@@ -136,65 +158,92 @@
             border-radius: 0;
             font-family: Montserrat, sans-serif;
         }
-  .navbar li a, .navbar .navbar-brand {
-      color: #fff !important;
-  }
-  .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #f4511e !important;
-      background-color: #fff !important;
-  }
-  .navbar-default .navbar-toggle {
-      border-color: transparent;
-      color: #fff !important;
-  }
-  footer .glyphicon {
-      font-size: 20px;
-      margin-bottom: 20px;
-      color: #f4511e;
-  }
-  .slideanim {visibility:hidden;}
-  .slide {
-      animation-name: slide;
-      -webkit-animation-name: slide;
-      animation-duration: 1s;
-      -webkit-animation-duration: 1s;
-      visibility: visible;
-  }
-  keyframes slide {
-    0% {
-      opacity: 0;
-      transform: translateY(70%);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0%);
-    }
-  }
-  -webkit-keyframes slide {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(70%);
-    }
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0%);
-    }
-  }
-  media screen and (max-width: 768px) {
-    .col-sm-4 {
-      text-align: center;
-      margin: 25px 0;
-    }
-    .btn-lg {
-        width: 100%;
-        margin-bottom: 35px;
-    }
-  }
-  media screen and (max-width: 480px) {
-    .logo {
-        font-size: 150px;
-    }
-  }
+
+            .navbar li a, .navbar .navbar-brand {
+                color: #fff !important;
+            }
+
+        .navbar-nav li a:hover, .navbar-nav li.active a {
+            color: #f4511e !important;
+            background-color: #fff !important;
+        }
+
+        .navbar-default .navbar-toggle {
+            border-color: transparent;
+            color: #fff !important;
+        }
+
+        footer .glyphicon {
+            font-size: 20px;
+            margin-bottom: 20px;
+            color: #f4511e;
+        }
+
+        .slideanim {
+            visibility: hidden;
+        }
+
+        .slide {
+            animation-name: slide;
+            -webkit-animation-name: slide;
+            animation-duration: 1s;
+            -webkit-animation-duration: 1s;
+            visibility: visible;
+        }
+
+        keyframes slide {
+            0%
+
+        {
+            opacity: 0;
+            transform: translateY(70%);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateY(0%);
+        }
+
+        }
+
+        -webkit-keyframes slide {
+            0%
+
+        {
+            opacity: 0;
+            -webkit-transform: translateY(70%);
+        }
+
+        100% {
+            opacity: 1;
+            -webkit-transform: translateY(0%);
+        }
+
+        }
+
+        media screen and (max-width: 768px) {
+            .col-sm-4
+
+        {
+            text-align: center;
+            margin: 25px 0;
+        }
+
+        .btn-lg {
+            width: 100%;
+            margin-bottom: 35px;
+        }
+
+        }
+
+        media screen and (max-width: 480px) {
+            .logo
+
+        {
+            font-size: 150px;
+        }
+
+        }
     </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -225,7 +274,14 @@
     <div class="jumbotron text-center">
         <h1>YourCourses</h1>
         <p>We specialize in interactive courses</p>
-        
+        @*<form>
+                <div class="input-group">
+                    <input type="email" class="form-control" size="50" placeholder="Email Address" required>
+                    <div class="input-group-btn">
+                        <button type="button" class="btn btn-danger">Subscribe</button>
+                    </div>
+                </div>
+            </form>*@
     </div>
 
     <!-- Container (About Section) -->
@@ -235,7 +291,7 @@
                 <h2>About Company Page</h2><br>
                 <h4>YourCourses - это онлайн-учебное место для существующих и начинающих разработчиков, которые учатся через развлекательный контент. Каждый курс построен вокруг творческой темы делая процесс более увлекательным. Мы комбинируем интерактивные механизмы с лекциями, чтобы сделать обучение интересным и запоминающимся.</h4><br>
                 <p>Навыки кодирования никогда не пользовались повышенным спросом, но традиционные курсы по информатике часто являются дорогостоящими, трудоемкими и не обладают гибкостью, которую требуют многие люди. Между тем, технология движется быстрее, чем когда-либо, и чтобы оставаться в силе, многие разработчики должны постоянно изучать новые навыки за пределами своей дневной работы. Это оставило место для новых подходов к образованию кода.</p>
-                <br><button onclick="location.href='@Url.Action("Index", "CoursesList")'", class="btn btn-default btn-lg">Get in Touch</button>
+                <br><button onclick="location.href='@Url.Action("Index", "CoursesList")'" , class="btn btn-default btn-lg">Get in Touch</button>
             </div>
             <div class="col-sm-4">
                 <span class="glyphicon glyphicon-signal logo"></span>
@@ -283,7 +339,7 @@
         </div>
         <br><br>
         <div class="row slideanim">
-            
+
             <div class="col-sm-4">
                 <span class="glyphicon glyphicon-certificate logo-small"></span>
                 <h4>CERTIFIED</h4>
@@ -372,7 +428,7 @@
                         <h1>Basic</h1>
                     </div>
                     <div class="panel-body">
-                        
+
                         <p><strong>Primary</strong> courses</p>
                     </div>
                     <div class="panel-footer">
@@ -382,8 +438,8 @@
                     </div>
                 </div>
             </div>
-            
-            
+
+
             <div class="col-sm-4 col-xs-12">
                 <div class="panel panel-default text-center">
                     <div class="panel-heading">
@@ -412,41 +468,43 @@
         <div class="row">
             <div class="col-sm-5">
                 <p>Соединитесь с нами и мы поможем вам</p>
-                <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
+                <p><span class="glyphicon glyphicon-map-marker"></span> Chernomorsk, Ukraine</p>
                 <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
                 <p><span class="glyphicon glyphicon-envelope"></span> yuriygurin1@mail.ru</p>
             </div>
-            <div class="col-sm-7 slideanim">
-                <div class="row">
-                    <div class="col-sm-6 form-group">
-                        <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            <form id="contact-form">
+                <div class="col-sm-7 slideanim">
+                    <div class="row">
+                        <div class="col-sm-6 form-group">
+                            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+                        </div>
+                        <div class="col-sm-6 form-group">
+                            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                        </div>
                     </div>
-                    <div class="col-sm-6 form-group">
-                        <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+                    <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5" onkeyup='validateMessage()'></textarea><br>
+                    <div class="row">
+                        <div class="col-sm-12 form-group">
+                            <button class="btn btn-default pull-right" type="submit">Send</button>
+                        </div>
                     </div>
                 </div>
-                <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-                <div class="row">
-                    <div class="col-sm-12 form-group">
-                        <button class="btn btn-default pull-right" type="submit">Send</button>
-                    </div>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 
-    
+
 
     <!-- Add Google Maps -->
     <div id="googleMap" style="height:400px;width:100%;"></div>
     <script>
-function myMap() {
-    var myCenter = new google.maps.LatLng(46.29761099, 30.64292908);
-var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-var marker = new google.maps.Marker({position:myCenter});
-marker.setMap(map);
-}
+        function myMap() {
+            var myCenter = new google.maps.LatLng(46.29761099, 30.64292908);
+            var mapProp = { center: myCenter, zoom: 12, scrollwheel: false, draggable: false, mapTypeId: google.maps.MapTypeId.ROADMAP };
+            var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+            var marker = new google.maps.Marker({ position: myCenter });
+            marker.setMap(map);
+        }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAjMAfbwzuo434ZuwedGk-hIpKI-Lrn68c&callback=myMap"></script>
     <!--
@@ -462,40 +520,81 @@ marker.setMap(map);
     </footer>
 
     <script>
-$(document).ready(function(){
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-      // Prevent default anchor click behavior
-      event.preventDefault();
+        $(document).ready(function () {
+            // Add smooth scrolling to all links in navbar + footer link
+            $(".navbar a, footer a[href='#myPage']").on('click', function (event) {
+                // Make sure this.hash has a value before overriding default behavior
+                if (this.hash !== "") {
+                    // Prevent default anchor click behavior
+                    event.preventDefault();
 
-      // Store hash
-      var hash = this.hash;
+                    // Store hash
+                    var hash = this.hash;
 
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
+                    // Using jQuery's animate() method to add smooth page scroll
+                    // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+                    $('html, body').animate({
+                        scrollTop: $(hash).offset().top
+                    }, 900, function () {
 
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
+                        // Add hash (#) to URL when done scrolling (default click behavior)
+                        window.location.hash = hash;
+                    });
+                } // End if
+            });
 
-  $(window).scroll(function() {
-    $(".slideanim").each(function(){
-      var pos = $(this).offset().top;
+            $(document).ready(function () {
+                $('#contact-form').submit(function (e) {
+                    var name = document.getElementById('name')
+                    var email = document.getElementById('email')
+                    var message = document.getElementById('comments')
 
-      var winTop = $(window).scrollTop();
-        if (pos < winTop + 600) {
-          $(this).addClass("slide");
+                    if (!name.value || !email.value || !message.value) {
+                        alertify.error("Please check your entries");
+                        return false;
+                    } else {
+                        $.ajax({
+                            method: 'POST',
+                            url: '//formspree.io/yuriygurin1@mail.ru',
+                            data: $(this).serialize(),
+                            datatype: 'json'
+                        });
+                        e.preventDefault();
+                        $(this).get(0).reset();
+                        alertify.success("Message sent");
+                    }
+                });
+            });
+
+            $(window).scroll(function () {
+                $(".slideanim").each(function () {
+                    var pos = $(this).offset().top;
+
+                    var winTop = $(window).scrollTop();
+                    if (pos < winTop + 600) {
+                        $(this).addClass("slide");
+                    }
+                });
+            });
+        })
+        function validateMessage() {
+            var message = document.getElementById('contact-message').value;
+            var required = 30;
+            var left = required - message.length;
+
+            if (left > 0) {
+                producePrompt(left + ' more characters required', 'message-error', 'red');
+                return false;
+            }
+            function validateForm() {
+                if (!validateName() || !validatePhone() || !validateEmail() || !validateMessage()) {
+                    jsShow('submit-error');
+                    producePrompt('Please fix errors to submit.', 'submit-error', 'red');
+                    setTimeout(function () { jsHide('submit-error'); }, 2000);
+                    return false;
+                }
+            }
         }
-    });
-  });
-})
     </script>
 
 </body>
