--- a/YourCourses/Views/PracticesHome/Create.cshtml
+++ b/YourCourses/Views/PracticesHome/Create.cshtml
@@ -101,5 +101,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary" })
 </div>
