--- a/YourCourses/Views/SubLectures/Index.cshtml
+++ b/YourCourses/Views/SubLectures/Index.cshtml
@@ -7,17 +7,17 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
 </p>
-<table class="table">
+<table class="table table-bordered">
     <tr>
-        <th>
+        <th class="success">
             @Html.DisplayNameFor(model => model.LectureLectureId)
         </th>
-        <th>
+        <th class="success">
             @Html.DisplayNameFor(model => model.SubName)
         </th>
-        <th></th>
+        <th class="active"></th>
     </tr>
 
     @foreach (var item in Model)
@@ -30,9 +30,9 @@
                 @Html.DisplayFor(modelItem => item.SubName)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.SubId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.SubId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.SubId })
+                @Html.ActionLink("Edit", "Edit", new { id = item.SubId }, new { @class = "btn btn-primary" }) 
+                @Html.ActionLink("Details", "Details", new { id = item.SubId }, new { @class = "btn btn-info" }) 
+                @Html.ActionLink("Delete", "Delete", new { id = item.SubId }, new { @class = "btn btn-danger" })
             </td>
         </tr>
     }
