--- a/YourCourses/Views/Execute/Index.cshtml
+++ b/YourCourses/Views/Execute/Index.cshtml
@@ -37,9 +37,11 @@
     
 
     </style>
+
 </head>
 
 <body>
+    <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='@Url.Action("Index", "CoursesList")'">Вернуться на страницу выбора курсов</button>
     <div class="container">
         <div>
             <h1>Write your C# code here</h1>
