--- a/YourCourses/Views/Home/Index.cshtml
+++ b/YourCourses/Views/Home/Index.cshtml
@@ -288,7 +288,7 @@
     <div id="about" class="container-fluid">
         <div class="row">
             <div class="col-sm-8">
-                <h2>About Company Page</h2><br>
+                <h2>Интерактивная система обучения </h2><br>
                 <h4>YourCourses - это онлайн-учебное место для существующих и начинающих разработчиков, которые учатся через развлекательный контент. Каждый курс построен вокруг творческой темы делая процесс более увлекательным. Мы комбинируем интерактивные механизмы с лекциями, чтобы сделать обучение интересным и запоминающимся.</h4><br>
                 <p>Навыки кодирования никогда не пользовались повышенным спросом, но традиционные курсы по информатике часто являются дорогостоящими, трудоемкими и не обладают гибкостью, которую требуют многие люди. Между тем, технология движется быстрее, чем когда-либо, и чтобы оставаться в силе, многие разработчики должны постоянно изучать новые навыки за пределами своей дневной работы. Это оставило место для новых подходов к образованию кода.</p>
                 <br><button onclick="location.href='@Url.Action("Index", "CoursesList")'" , class="btn btn-default btn-lg">Get in Touch</button>
@@ -367,16 +367,16 @@
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="newyork.jpg" alt="New York" width="400" height="300">
-                    <p><strong>New York</strong></p>
-                    <p>We built New York</p>
+                    <img src="~/Content/Images/3.png" alt="New York" width="400" height="300">
+                    <p><strong>Лекции</strong></p>
+                    <p>Качественные лекции</p>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="thumbnail">
-                    <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-                    <p><strong>San Francisco</strong></p>
-                    <p>Yes, San Fran is ours</p>
+                    <img src="~/Content/Images/2.png" alt="San Francisco" width="400" height="300">
+                    <p><strong>Челленджи</strong></p>
+                    <p>Прохождение практических заданий с повышающейся сложностью</p>
                 </div>
             </div>
         </div><br>
