--- a/YourCourses/Views/AdminPage/InfoAbout.cshtml
+++ b/YourCourses/Views/AdminPage/InfoAbout.cshtml
@@ -3,19 +3,43 @@
     ViewBag.Title = "CreateCourse";
 }
 
-<h2>Admin Page</h2>
-<p class="text-left">Данная страница предоставляет возможность:</p>
-<ol>
-    <li>Просматривать информацию обо всех пользователях</li>
-    <li>Редактировать информацию обо всех пользователях</li>
-    <li>Создавать новый курс</li>
-    <li>Удалять курс</li>
+<h2>Страница администратора</h2>
 
-</ol>
 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-<button type="button"  onclick="location.href='@Url.Action("Create", "Courses")'" class="btn btn-primary btn-lg btn-block" >Создать интерактивный курс</button>
-<button type="button"  onclick="location.href='@Url.Action("Create", "Quizs")'" class="btn btn-primary btn-lg btn-block">Создать опрос</button>
 
-<button type="button" onclick="location.href='@Url.Action("", "")'" class="btn btn-danger btn-lg btn-block ">Удалить</button>
 
-<li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
+
+
+<div class="btn-group btn-group-lg">
+    <strong>Управление курсами:</strong><br>
+    <button type="button" onclick="location.href='@Url.Action("Create", "Courses")'" class="btn btn-default ">Создать новый курс</button>
+    <button type="button"  onclick="location.href='@Url.Action("Index", "Courses")'" class="btn btn-info">Просмотреть список существующих курсов</button>
+    <br>
+</div>
+<br>
+<hr>
+    Управление модулями:<br>
+<div class="btn-group btn-group-lg">
+    <button type="button" onclick="location.href='@Url.Action("Create", "Lectures")'" class="btn btn-default ">Создать новый модуль</button>
+    <button type="button" onclick="location.href='@Url.Action("Index", "Lectures")'" class="btn btn-info">Просмотреть список существующих модулей</button>
+
+    </div>
+<hr>
+ Управление лекциями:<br>
+<div class="btn-group btn-group-lg">
+    <button type="button" onclick="location.href='@Url.Action("Create", "SubLectures")'" class="btn btn-default ">Создать новую лекцию</button>
+    <button type="button" onclick="location.href='@Url.Action("Index", "SubLectures")'" class="btn btn-info">Просмотреть список существующих лекций</button>
+
+</div>
+<hr>
+Управление практикой:<br>
+<div class="btn-group btn-group-lg">
+    <button type="button" onclick="location.href='@Url.Action("Create", "PracticesHome")'" class="btn btn-default ">Создать новую практику</button>
+    <button type="button" onclick="location.href='@Url.Action("Index", "PracticesHome")'" class="btn btn-info">Просмотреть список существующих практик</button>
+
+</div>
+
+    <br>
+    <br>
+    <br>
+    @Html.ActionLink("Домашняя страница", "Index", "Home", new { @class = "btn btn-primary" })
