--- a/YourCourses/Views/CoursesList/SubLecturesList.cshtml
+++ b/YourCourses/Views/CoursesList/SubLecturesList.cshtml
@@ -2,28 +2,38 @@
 @model IEnumerable<YourCourses.Models.SubLecture>
 
 <script src="~/Scripts/bootstrap.min.js"></script>
-
-<ul class="nav nav-tabs">
+<div class="btn-group-vertical">
+    <br>
+    <br>
     @foreach (var items in Model)
     {
-        <br>
-        <br>
-        <li role="presentation" class="active">
+        
+        
 
-            @Ajax.ActionLink(" "+@items.SubName, "ShowLecture", new { id = items.SubId },
-    new AjaxOptions { UpdateTargetId = "results1"/*, LoadingElementId = "loading3"*/ },
-    new { @style = "text-transform:capitalize;", @class= "glyphicon glyphicon-book" })
+            @Ajax.ActionLink(" " + @items.SubName, "ShowLecture", new { id = items.SubId },
+new AjaxOptions { UpdateTargetId = "results1"/*, LoadingElementId = "loading3"*/ },
+new { @style = "text-transform:capitalize; padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;",
+    @class = "glyphicon glyphicon-book btn btn-default" })
 
-        </li>
-       
+        
+
         @*<img id="loading3" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
 
     }
-    </ul>
+    
+    </div>
     <br>
-    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new { @class = "btn btn-outline-info" })
+<br>
+<div class="btn-group-vertical">
+@if (User.IsInRole("admin"))
+{
+    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new { @class = "btn btn-default" })
+
+   @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null, new { @class = "btn btn-default" })
+}
+    
+</div>
     <br>
-    @Html.ActionLink("Добавить практику", "Create", "PracticesHome")
 
     <div id="results1"></div>
 
