--- a/YourCourses/Views/Account/Login.cshtml
+++ b/YourCourses/Views/Account/Login.cshtml
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Регистрация нового пользователя", "Register")
+                    @Html.ActionLink("Регистрация нового пользователя", "Register", null, new { @class="btn btn-primary"})
                 </p>
                 @* Включите, когда будет включено подтверждение учетной записи для функции сброса пароля
                     <p>
