--- a/YourCourses/Views/CoursesList/SubLecturesList.cshtml
+++ b/YourCourses/Views/CoursesList/SubLecturesList.cshtml
@@ -5,6 +5,7 @@
 <div class="btn-group-vertical">
     <br>
     <br>
+
     @foreach (var items in Model)
     {
         
@@ -20,16 +21,15 @@ new { @style = "text-transform:capitalize; padding-top:12px; padding-bottom: 10p
         @*<img id="loading3" src="@Url.Content("~/Content/Images/gears.gif")" style="display:none" />*@
 
     }
-    
     </div>
     <br>
 <br>
 <div class="btn-group-vertical">
 @if (User.IsInRole("admin"))
 {
-    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new { @class = "btn btn-default" })
+    @Html.ActionLink("Добавить лекцию", "Create", "SubLectures", null, new {  @style = "text-transform:capitalize; padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;",@class = "btn btn-default" })
 
-   @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null, new { @class = "btn btn-default" })
+   @Html.ActionLink("Добавить практику", "Create", "PracticesHome", null, new { @style = "text-transform:capitalize; padding-top:12px; padding-bottom: 10px;text-align:left; max-width: 300px;font-size:large;", @class = "btn btn-default" })
 }
     
 </div>
