--- a/YourCourses/Views/Execute/Index.cshtml
+++ b/YourCourses/Views/Execute/Index.cshtml
@@ -44,11 +44,12 @@
     <button type="button" class="btn btn-default btn-lg btn-block" onclick="location.href='@Url.Action("Index", "CoursesList")'">Вернуться на страницу выбора курсов</button>
     <div class="container">
         <div>
-            <h1>Write your C# code here</h1>
-
+            <h1>Прочтите задание и приступайте к выполнению</h1>
+            @*Добавить вывод случайной практики из форич, а не первой(как сейчас)*@
             @using (Html.BeginForm())
             {
                 
+                @Html.Raw(Session["TEXT"].ToString())
                 <div class="form-group">
                     @Html.TextArea("FirstPart", (string)Session["FP"])
                     @Html.Hidden("TEST",(string)Session["TEST"])
