--- a/YourCourses/Views/Home/Contact.cshtml
+++ b/YourCourses/Views/Home/Contact.cshtml
@@ -3,21 +3,8 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-@{ 
 
-    Layout = null;
-}
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
 <!-- Bootstrap and JQuery -->
 <script src="~/Scripts/jquery-3.1.1.min.js"> </script>
 <link rel="stylesheet" href="~/Content/bootstrap.min.css">
@@ -26,7 +13,12 @@
 <link rel="stylesheet" type="text/css" href="~/Scripts/chatSocketAchex-gh-pages/chatSocketAchex.css">
 <script src="~/Scripts/chatSocketAchex-gh-pages/chatSocketAchex.js"></script>
 
-
+<style>
+    .Elchat {
+    width:100px;
+    
+    }
+</style>
 <div  id="example"></div>
 <script>
 $('#example').ChatSocket({
