--- a/YourCourses/Views/Shared/_Layout.cshtml
+++ b/YourCourses/Views/Shared/_Layout.cshtml
@@ -20,17 +20,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#myPage">Logo</a>
+                
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Проверка кода", "Index", "Practice")</li>
-                    <li>@Html.ActionLink("Интерактивные курсы", "Index", "CoursesList")</li>
-                    
-                    <li>@Html.ActionLink("Помощь", "Contact", "Home")</li>
-                    <li style="color:aqua">@Html.Partial("_LoginPartial")</li>
+                    <li>@Html.ActionLink(" Домашняя страница", "Index", "Home", null, new { @class = "glyphicon glyphicon-home" })</li>
+                    <li>@Html.ActionLink(" Проверка кода", "Index", "Practice", null, new { @class="glyphicon glyphicon-pencil" })</li>
+                    <li>@Html.ActionLink(" Курсы", "Index", "CoursesList", null, new { @class= "glyphicon glyphicon-check" })</li>
+                    @if (User.IsInRole("admin"))
+                    {
+                    <li>@Html.ActionLink(" Страница администратора", "InfoAbout", "AdminPage", null, new { @class = "glyphicon glyphicon-home" })</li>
+                    }
+                    <li>@Html.ActionLink(" Помощь", "Contact", "Home", null, new { @class= "glyphicon glyphicon-question-sign" })</li>
+                    <li>@Html.Partial("_LoginPartial")</li>
                 </ul>
+                
             </div>
         </div>
     </nav>
