--- a/YourCourses/Views/Shared/_LoginPartial.cshtml
+++ b/YourCourses/Views/Shared/_LoginPartial.cshtml
@@ -1,29 +1,27 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@{Layout = null; }
+@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
-    @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-       
-       
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li>@Html.ActionLink("Admin Page", "InfoAbout", "AdminPage")</li>
-@if (User.IsInRole("admin"))
-{
-                <li><a href="#">@Html.ActionLink("Courses", "Index", "CoursesList")</a></li>
-}
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a></li>
-            </ul>
-        </li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @Html.ActionLink("Здравствуйте, " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="@Url.Action("Mine", "Gigs")">My Upcoming Gigs</a></li>
+                    <li><a href="@Url.Action("Attending", "Gigs")">Gigs I'm Going</a></li>
+                    <li><a href="@Url.Action("FollowingArtists", "Followees")">Artist I'm Following</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+                </ul>
+            </li>
+        </ul>
     }
 }
 else
